Add rasa chatbot

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Rasa ChatBot files
+/chatbot/.rasa
+/chatbot/models
+/chatbot/actions/__pycache__
