--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -16,7 +16,7 @@ responses:
 
   utter_cheer_up:
   - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
+    image: "https://media.tenor.com/oCBoAcpE9xAAAAAM/cool-fun.gif"
 
   utter_did_that_help:
   - text: "Did that help you?"
